--- a/index.html
+++ b/index.html
@@ -2,99 +2,227 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>رحلتك تبدأ هنا</title>
+  <title>روابط مستر فيصل</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800;900&display=swap" rel="stylesheet" />
+  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
   <style>
     body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
+      margin: 0; padding: 0;
       font-family: 'Cairo', sans-serif;
-      color: white;
-      text-align: center;
+      color: #111;
+      min-height: 100vh;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+      background: #000;
     }
-
-    /* خلفية الفيديو */
-    .video-background {
+    #preloader {
       position: fixed;
-      top: 0;
-      left: 0;
+      top: 0; left: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden;
-      z-index: -1;
-    }
-
-    .video-background video {
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-    }
-
-    /* المحتوى فوق الفيديو */
-    .content {
-      position: relative;
-      z-index: 2;
+      background: white;
+      z-index: 9999;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
+    }
+    #videoBackground {
+      position: relative;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.4);
-      padding: 20px;
+      overflow: hidden;
     }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
+    #videoBackground video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: translate(-50%, -50%);
+      z-index: 0;
+      background: #000;
     }
-
-    p {
-      font-size: 1.2rem;
-      max-width: 600px;
-    }
-
-    /* زر الرحلة */
-    .start-btn {
-      margin-top: 30px;
-      padding: 15px 30px;
-      font-size: 1.2rem;
+    #videoOverlay {
+      position: relative;
+      z-index: 1;
+      text-align: center;
       color: white;
-      background-color: #ff5722;
-      border: none;
-      border-radius: 8px;
+      font-size: 28px;
+      font-weight: 900;
+      top: 45%;
+      transform: translateY(-50%);
+      text-shadow: 0 4px 8px rgba(0,0,0,0.5);
+    }
+    .content {
+      background: white;
+      padding: 40px 16px;
+    }
+    .social-section {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      max-width: 480px;
+      margin: 0 auto;
+    }
+    .social-card {
+      background: white;
+      border-radius: 18px;
+      padding: 16px 14px;
+      text-align: right;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
+      border: 1.5px solid #ddd;
       cursor: pointer;
-      transition: background 0.3s ease;
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .social-card:hover {
+      transform: scale(1.04);
+      box-shadow: 0 10px 30px rgba(76,175,80,0.3);
+      border-color: #4caf50;
+    }
+    .social-card a {
+      color: #111;
       text-decoration: none;
+      flex: 1;
+      display: block;
     }
-
-    .start-btn:hover {
-      background-color: #e64a19;
+    .social-card img {
+      width: 56px;
+      height: 56px;
+      object-fit: contain;
+      border-radius: 50%;
+      background: white;
+      padding: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.12);
+      flex-shrink: 0;
     }
-
-    @media (max-width: 768px) {
-      h1 { font-size: 1.8rem; }
-      p { font-size: 1rem; }
+    /* زر ابدأ الرحلة */
+    .start-journey {
+      max-width: 480px;
+      margin: 30px auto 0;
+      padding: 18px 20px;
+      background: linear-gradient(135deg, #4caf50, #2e7d32);
+      color: white;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      border-radius: 14px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+      cursor: pointer;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: pulse 1.5s infinite;
+    }
+    .start-journey:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(76,175,80,0.4);
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.03); }
+      100% { transform: scale(1); }
+    }
+    footer {
+      width: 100%;
+      padding: 12px 8px;
+      text-align: center;
+      font-size: 11px;
+      color: #999;
+      background: #f9f9f9;
+      font-weight: 600;
+      font-family: 'Cairo', sans-serif;
+      box-shadow: inset 0 1px 2px rgba(0,0,0,0.05);
+    }
+    footer span {
+      font-style: italic;
+      color: #4caf50;
+      font-weight: 700;
     }
   </style>
 </head>
 <body>
 
+  <!-- شاشة التحميل -->
+  <div id="preloader" aria-label="تحميل">
+    <dotlottie-wc 
+      src="https://lottie.host/953639aa-133c-4c35-8508-c65811fe8898/jZylR2TITf.lottie" 
+      style="width: 300px; height: 300px;" 
+      speed="1" 
+      autoplay 
+      loop
+      aria-label="تحميل متحرك">
+    </dotlottie-wc>
+  </div>
+
   <!-- خلفية الفيديو -->
-  <div class="video-background">
+  <section id="videoBackground">
     <video autoplay muted loop playsinline>
-      <source src="your-video.mp4" type="video/mp4">
-      متصفحك لا يدعم تشغيل الفيديو.
+      <source src="https://files.catbox.moe/1dldfl.mp4" type="video/mp4" />
+      متصفحك لا يدعم عرض الفيديو.
     </video>
-  </div>
+    <div id="videoOverlay">مرحباً بك في عالم مستر فيصل</div>
+  </section>
 
-  <!-- المحتوى -->
+  <!-- محتوى الكروت -->
   <div class="content">
-    <h1>مرحباً بك في رحلتك</h1>
-    <p>استعد لخوض تجربة مميزة تبدأ بخطوة واحدة فقط.</p>
-    <a href="start.html" class="start-btn">ابدأ الرحلة الآن</a>
+    <section class="social-section" aria-label="روابط التواصل الاجتماعي">
+      <div class="social-card">
+        <a href="https://www.whatsapp.com/channel/0029Vb5eotiHFxOvJuFpMI39" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساب" />
+          <h3>انضم لقناة الواتساب</h3>
+          <p>تابع آخر الأخبار والعروض</p>
+        </a>
+      </div>
+      <div class="social-card">
+        <a href="https://www.facebook.com/groups/450656791778335/?locale=ar_AR" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="فيسبوك جروب" />
+          <h3>انضم لجروب الفيسبوك</h3>
+          <p>محتوى خاص وتفاعل مباشر</p>
+        </a>
+      </div>
+      <div class="social-card">
+        <a href="https://youtube.com/@mr.faisal.geography?si=5HQdYcyREdFSKiwp" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="يوتيوب" />
+          <h3>اشترك في قناة اليوتيوب</h3>
+          <p>شروحات جغرافيا ومراجعات قوية</p>
+        </a>
+      </div>
+      <div class="social-card">
+        <a href="https://www.tiktok.com/@mr.faisal.geo?_t=ZS-8ySdp4xYApc&_r=1" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/en/a/a9/TikTok_logo.svg" alt="تيك توك" />
+          <h3>تابعني على تيك توك</h3>
+          <p>فيديوهات تعليمية ومراجعات</p>
+        </a>
+      </div>
+      <div class="social-card">
+        <a href="https://www.facebook.com/Mr.faisl" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="صفحة فيسبوك" />
+          <h3>تابع صفحتي على فيسبوك</h3>
+          <p>أحدث الأخبار والمحتوى الخاص</p>
+        </a>
+      </div>
+    </section>
+
+    <!-- زر ابدأ الرحلة -->
+    <div class="start-journey" onclick="location.href='start.html'">
+      🚀 ابدأ الرحلة الآن - اضغط هنا
+    </div>
   </div>
 
+  <!-- تذييل الحقوق -->
+  <footer>
+    جميع الحقوق محفوظة لدى <span>abdulrahman adel</span> | نسخة الموقع لدفعه 2026 &copy;
+  </footer>
+
+  <script>
+    const preloader = document.getElementById('preloader');
+    window.addEventListener('load', () => {
+      preloader.style.transition = 'opacity 0.8s ease';
+      preloader.style.opacity = 0;
+      setTimeout(() => preloader.style.display = 'none', 800);
+    });
+  </script>
 </body>
 </html>
