--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
     .content {
       background: white;
       padding: 40px 16px;
+      position: relative;
+    }
+    .funny-gif {
+      position: relative;
+      width: 100px;
+      height: 100px;
+      margin: 0 auto 20px;
+      animation: moveAround 5s infinite ease-in-out;
+    }
+    @keyframes moveAround {
+      0% { transform: translateY(0) rotate(0deg) scale(1); }
+      25% { transform: translateY(15px) rotate(10deg) scale(1.1); }
+      50% { transform: translateY(-15px) rotate(-10deg) scale(0.95); }
+      75% { transform: translateY(15px) rotate(10deg) scale(1.05); }
+      100% { transform: translateY(0) rotate(0deg) scale(1); }
     }
     .social-section {
       display: flex;
@@ -167,6 +182,18 @@
 
   <!-- محتوى الكروت -->
   <div class="content">
+
+    <!-- GIF الكوميدي -->
+    <div class="funny-gif">
+      <dotlottie-wc 
+        src="https://lottie.host/8cf4da05-1e33-4e5b-83fa-6a36cb6d79d6/uSGNo9SQrn.lottie" 
+        style="width: 100px; height: 100px;" 
+        speed="1" 
+        autoplay 
+        loop>
+      </dotlottie-wc>
+    </div>
+
     <section class="social-section" aria-label="روابط التواصل الاجتماعي">
       <div class="social-card">
         <a href="https://www.whatsapp.com/channel/0029Vb5eotiHFxOvJuFpMI39" target="_blank">
