--- a/الصفحه-الرئيسية/index.html
+++ b/الصفحه-الرئيسية/index.html
@@ -1,215 +1,227 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>روابط مستر فيصل</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800;900&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800;900&display=swap" rel="stylesheet" />
+  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
+    body, html {
+      margin: 0; padding: 0;
       font-family: 'Cairo', sans-serif;
-      background: black;
-      scroll-behavior: smooth;
-    }
-    .point-down {
-      display: inline-block;
-      animation: bounceDown 1.8s infinite;
-    }
-    @keyframes bounceDown {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(5px); }
-    }
-    @keyframes slideUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(40px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    @keyframes clickedEffect {
-      0% { transform: scale(1); background-color: rgba(0, 255, 0, 0.2); }
-      50% { transform: scale(0.96); }
-      100% { transform: scale(1); background-color: transparent; }
-    }
-    .social-section {
-      padding: 60px 12px 40px;
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-      max-width: 95%;
-      margin: auto;
-    }
-    .social-card {
-      backdrop-filter: blur(10px);
-      border-radius: 16px;
-      padding: 14px;
-      text-align: center;
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
-      border: 1px solid #ccc;
-      opacity: 0;
-      animation: fadeInUp 0.8s forwards;
-      transition: all 0.3s ease;
-      cursor: pointer;
-      background: rgba(255, 255, 255, 0.9);
-      color: #111 !important;
-    }
-    .social-card a {
-      color: #000 !important;
-      text-decoration: none;
-      display: block;
-    }
-    .social-card img {
-      width: 50px;
-      height: 50px;
-      object-fit: contain;
-      margin-bottom: 8px;
-      border-radius: 50%;
-      background: white;
-      padding: 6px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    .social-card h3 {
-      margin: 0;
-      font-size: 15px;
-      font-weight: bold;
       color: #111;
+      min-height: 100vh;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+      background: #000;
     }
-    .social-card p {
-      font-size: 12px;
-      margin-top: 4px;
-      color: #333;
-    }
-    .social-card.clicked {
-      animation: clickedEffect 0.5s;
-    }
-    .social-card:hover {
-      background-color: rgba(0, 255, 0, 0.1);
-      transform: scale(1.02);
-    }
-    .start-card {
+    #preloader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: white;
+      z-index: 9999;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 20px 16px 60px;
     }
-    .start-card-inner {
-      background: linear-gradient(135deg, #00c9ff, #92fe9d);
-      color: #000;
-      border-radius: 16px;
-      padding: 18px 24px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-      font-size: 18px;
-      font-weight: bold;
+    #videoBackground {
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
+    }
+    #videoBackground video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: translate(-50%, -50%);
+      z-index: 0;
+      background: #000;
+    }
+    #videoOverlay {
+      position: relative;
+      z-index: 1;
       text-align: center;
-      animation: zoomRotate 1s ease forwards;
+      color: white;
+      font-size: 28px;
+      font-weight: 900;
+      top: 45%;
+      transform: translateY(-50%);
+      text-shadow: 0 4px 8px rgba(0,0,0,0.5);
+    }
+    .content {
+      background: white;
+      padding: 40px 16px;
+    }
+    .social-section {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      transform: scale(0.5) rotate(-10deg);
-      opacity: 0;
-      font-family: 'Cairo', sans-serif;
+      gap: 16px;
+      max-width: 480px;
+      margin: 0 auto;
+    }
+    .social-card {
+      background: white;
+      border-radius: 18px;
+      padding: 16px 14px;
+      text-align: right;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
+      border: 1.5px solid #ddd;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.3s ease;
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    .start-card-inner:hover {
-      background: linear-gradient(135deg, #00e676, #66ffa6);
+    .social-card:hover {
+      transform: scale(1.04);
+      box-shadow: 0 10px 30px rgba(76,175,80,0.3);
+      border-color: #4caf50;
+    }
+    .social-card a {
+      color: #111;
+      text-decoration: none;
+      flex: 1;
+      display: block;
+    }
+    .social-card img {
+      width: 56px;
+      height: 56px;
+      object-fit: contain;
+      border-radius: 50%;
+      background: white;
+      padding: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.12);
+      flex-shrink: 0;
+    }
+    /* زر ابدأ الرحلة */
+    .start-journey {
+      max-width: 480px;
+      margin: 30px auto 0;
+      padding: 18px 20px;
+      background: linear-gradient(135deg, #4caf50, #2e7d32);
+      color: white;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      border-radius: 14px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+      cursor: pointer;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: pulse 1.5s infinite;
+    }
+    .start-journey:hover {
       transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(76,175,80,0.4);
     }
-    @keyframes zoomRotate {
-      to {
-        transform: scale(1) rotate(0deg);
-        opacity: 1;
-      }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.03); }
+      100% { transform: scale(1); }
     }
-    @keyframes rocket {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-6px); }
+    footer {
+      width: 100%;
+      padding: 12px 8px;
+      text-align: center;
+      font-size: 11px;
+      color: #999;
+      background: #f9f9f9;
+      font-weight: 600;
+      font-family: 'Cairo', sans-serif;
+      box-shadow: inset 0 1px 2px rgba(0,0,0,0.05);
     }
-    /* سلاسة لانتقال الصفحة */
-    .fade-out {
-      opacity: 0;
-      transform: scale(0.98);
-      transition: opacity 0.5s ease, transform 0.5s ease;
+    footer span {
+      font-style: italic;
+      color: #4caf50;
+      font-weight: 700;
     }
   </style>
 </head>
 <body>
 
-  <div style="position: relative; width: 100vw; height: 100vh; overflow: hidden;">
-    <video autoplay muted loop playsinline style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; object-fit: cover; z-index: -1;">
-      <source src="https://files.catbox.moe/1dldfl.mp4" type="video/mp4">
+  <!-- شاشة التحميل -->
+  <div id="preloader" aria-label="تحميل">
+    <dotlottie-wc 
+      src="https://lottie.host/953639aa-133c-4c35-8508-c65811fe8898/jZylR2TITf.lottie" 
+      style="width: 300px; height: 300px;" 
+      speed="1" 
+      autoplay 
+      loop
+      aria-label="تحميل متحرك">
+    </dotlottie-wc>
+  </div>
+
+  <!-- خلفية الفيديو -->
+  <section id="videoBackground">
+    <video autoplay muted loop playsinline>
+      <source src="https://files.catbox.moe/1dldfl.mp4" type="video/mp4" />
+      متصفحك لا يدعم عرض الفيديو.
     </video>
+    <div id="videoOverlay">مرحباً بك في عالم مستر فيصل</div>
+  </section>
 
-    <div style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); z-index: 2; width: 90%; max-width: 320px;">
-      <div id="mainCard" style="
-        backdrop-filter: blur(10px);
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 18px;
-        padding: 18px 20px;
-        box-shadow: 0 6px 25px rgba(0,0,0,0.3);
-        color: white;
-        text-align: center;
-        opacity: 0;
-        transform: translateY(100px);
-        animation: slideUp 1.5s forwards ease-out;
-        cursor: default;
-      ">
-        <div style="font-size: 20px; font-weight: 800; margin-bottom: 6px;">
-          انضم لينا
-        </div>
-        <div style="font-size: 14px; font-weight: 600; display: flex; justify-content: center; align-items: center; gap: 4px; flex-wrap: wrap;">
-          <span class="point-down" style="font-size: 18px;">👇</span>
-          <span>في عالم مستر فيصل</span>
-          <span class="point-down" style="font-size: 18px;">👇</span>
-        </div>
+  <!-- محتوى الكروت -->
+  <div class="content">
+    <section class="social-section" aria-label="روابط التواصل الاجتماعي">
+      <div class="social-card">
+        <a href="https://www.whatsapp.com/channel/0029Vb5eotiHFxOvJuFpMI39" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساب" />
+          <h3>انضم لقناة الواتساب</h3>
+          <p>تابع آخر الأخبار والعروض</p>
+        </a>
       </div>
+      <div class="social-card">
+        <a href="https://www.facebook.com/groups/450656791778335/?locale=ar_AR" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="فيسبوك جروب" />
+          <h3>انضم لجروب الفيسبوك</h3>
+          <p>محتوى خاص وتفاعل مباشر</p>
+        </a>
+      </div>
+      <div class="social-card">
+        <a href="https://youtube.com/@mr.faisal.geography?si=5HQdYcyREdFSKiwp" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="يوتيوب" />
+          <h3>اشترك في قناة اليوتيوب</h3>
+          <p>شروحات جغرافيا ومراجعات قوية</p>
+        </a>
+      </div>
+      <div class="social-card">
+        <a href="https://www.tiktok.com/@mr.faisal.geo?_t=ZS-8ySdp4xYApc&_r=1" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/en/a/a9/TikTok_logo.svg" alt="تيك توك" />
+          <h3>تابعني على تيك توك</h3>
+          <p>فيديوهات تعليمية ومراجعات</p>
+        </a>
+      </div>
+      <div class="social-card">
+        <a href="https://www.facebook.com/Mr.faisl" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="صفحة فيسبوك" />
+          <h3>تابع صفحتي على فيسبوك</h3>
+          <p>أحدث الأخبار والمحتوى الخاص</p>
+        </a>
+      </div>
+    </section>
+
+    <!-- زر ابدأ الرحلة -->
+    <div class="start-journey" onclick="location.href='https://www.mrfaisal.net/start.html'">
+      🚀 ابدأ الرحلة الآن - اضغط هنا
     </div>
   </div>
 
-  <div class="social-section">
-    <div class="social-card"><a href="https://www.whatsapp.com/channel/0029Vb5eotiHFxOvJuFpMI39" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg"><h3>انضم لقناة الواتساب</h3><p>تابع آخر الأخبار والعروض</p></a></div>
-    <div class="social-card"><a href="https://www.facebook.com/groups/450656791778335/?locale=ar_AR" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"><h3>انضم لجروب الفيسبوك</h3><p>محتوى خاص وتفاعل مباشر</p></a></div>
-    <div class="social-card"><a href="https://youtube.com/@mr.faisal.geography?si=5HQdYcyREdFSKiwp" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png"><h3>اشترك في قناة اليوتيوب</h3><p>شروحات جغرافيا ومراجعات قوية</p></a></div>
-    <div class="social-card"><a href="https://www.tiktok.com/@mr.faisal.geo?_t=ZS-8ySdp4xYApc&_r=1" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/a/a9/TikTok_logo.svg"><h3>تابعني على تيك توك</h3><p>فيديوهات تعليمية ومراجعات</p></a></div>
-    <div class="social-card"><a href="https://www.facebook.com/Mr.faisl" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"><h3>تابع صفحتي على فيسبوك</h3><p>أحدث الأخبار والمحتوى الخاص</p></a></div>
-  </div>
-
-  <div id="joinCard" class="start-card">
-    <div class="start-card-inner" onclick="startJourney()">
-      <div style="font-size: 40px; animation: rocket 1.5s infinite;">🚀</div>
-      <div style="margin-top: 10px;">ابدأ الرحلة الآن</div>
-    </div>
-  </div>
-
-  <audio id="pageAudio" src="https://files.catbox.moe/ftvm82.ogg" style="display: none;"></audio>
+  <!-- تذييل الحقوق -->
+  <footer>
+    جميع الحقوق محفوظة لدى <span>abdulrahman adel</span> | نسخة الموقع لدفعه 2026 &copy;
+  </footer>
 
   <script>
-    function startJourney() {
-      const audio = document.getElementById('pageAudio');
-      audio.play().catch(err => console.log("Autoplay blocked:", err));
-
-      document.body.classList.add('fade-out');
-      setTimeout(() => {
-        window.location.href = "https://www.mrfaisal.net/start.html";
-      }, 500); // بعد نصف ثانية من السلاسة
-    }
-
-    document.querySelectorAll('.social-card').forEach(card => {
-      card.addEventListener('click', () => {
-        card.classList.add('clicked');
-        setTimeout(() => card.classList.remove('clicked'), 500);
-      });
+    const preloader = document.getElementById('preloader');
+    window.addEventListener('load', () => {
+      preloader.style.transition = 'opacity 0.8s ease';
+      preloader.style.opacity = 0;
+      setTimeout(() => preloader.style.display = 'none', 800);
     });
   </script>
 </body>
