--- a/start.html
+++ b/start.html
@@ -36,7 +36,8 @@
       padding: 100px 16px 60px;
     }
 
-    .yt-card {
+    /* السلايد شو */
+    .slider-container {
       position: relative;
       width: 320px;
       height: 480px;
@@ -44,64 +45,83 @@
       overflow: hidden;
       box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
       margin-bottom: 40px;
-      transition: transform 0.4s ease;
-      cursor: pointer;
     }
 
-    .yt-card:hover {
-      transform: scale(1.03);
+    .slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: opacity 0.8s ease-in-out;
     }
 
-    .yt-card img {
+    .slide.active {
+      opacity: 1;
+    }
+
+    .slide img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       display: block;
     }
 
-    .yt-overlay {
+    .slide-overlay {
       position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
+      bottom: 0;
+      width: 100%;
+      padding: 16px;
+      background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
+      color: white;
+      font-size: 20px;
+      font-weight: 900;
+      text-align: center;
+      text-shadow: 2px 2px 6px black;
+    }
+
+    .slide-overlay a {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 8px 14px;
+      background: rgba(255, 0, 0, 0.85);
+      color: white;
+      font-weight: bold;
+      border-radius: 10px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .slide-overlay a:hover {
+      background: rgba(255, 0, 0, 1);
+    }
+
+    /* أزرار التحكم */
+    .controls {
+      position: absolute;
+      top: 50%;
       width: 100%;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
+      justify-content: space-between;
+      transform: translateY(-50%);
+      padding: 0 10px;
+    }
+
+    .control-btn {
+      background: rgba(0,0,0,0.5);
+      border: none;
       color: white;
-      background: rgba(0, 0, 0, 0.5);
-      text-align: center;
+      font-size: 24px;
+      padding: 6px 10px;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: background 0.3s;
     }
 
-    .yt-overlay .title {
-      font-size: 60px;
-      font-weight: 900;
-      margin-bottom: 0px;
-      color: #fff;
-      text-shadow: 2px 2px 6px black;
+    .control-btn:hover {
+      background: rgba(0,0,0,0.8);
     }
 
-    .yt-overlay .subtitle {
-      font-size: 32px;
-      font-weight: 900;
-      margin-bottom: 16px;
-      color: #fff;
-      text-shadow: 2px 2px 6px black;
-    }
-
-    .yt-overlay .stat {
-      font-size: 16px;
-      margin: 4px 0;
-      color: #fff;
-      background: rgba(255, 0, 0, 0.7);
-      padding: 6px 12px;
-      border-radius: 10px;
-      display: inline-block;
-      text-shadow: 0 1px 2px #000;
-    }
-
+    /* الأزرار السفلية */
     .buttons {
       display: flex;
       flex-wrap: wrap;
@@ -153,25 +173,12 @@
     }
 
     @media(max-width: 500px) {
-      .yt-card {
+      .slider-container {
         width: 90%;
         height: 440px;
       }
-
       .buttons .button-link {
         flex: 0 0 100%;
-      }
-
-      .yt-overlay .title {
-        font-size: 38px;
-      }
-
-      .yt-overlay .subtitle {
-        font-size: 26px;
-      }
-
-      .yt-overlay .stat {
-        font-size: 14px;
       }
     }
   </style>
@@ -184,16 +191,33 @@
   </div>
 
   <div class="container">
-    <div class="yt-card">
-      <img src="https://files.catbox.moe/4mdr3d.jpeg" alt="قناة مستر فيصل">
-      <div class="yt-overlay">
-        <div class="title">قناتنا</div>
-        <div class="subtitle">على اليوتيوب</div>
-        <div class="stat">📺 عدد المشتركين: 102,000</div>
-        <div class="stat">👁️‍🗨️ عدد المشاهدات: 4,300,000</div>
+    <!-- سلايد شو -->
+    <div class="slider-container">
+      <!-- السلايد 1 -->
+      <div class="slide active">
+        <img src="https://files.catbox.moe/s5u250.png" alt="المحاضرة التعريفية">
+        <div class="slide-overlay">
+          📢 الآن المحاضرة التعريفية لدفعة 26
+          <a href="https://youtu.be/Qvgq0KsjhGY" target="_blank">شاهد الآن ▶</a>
+        </div>
+      </div>
+
+      <!-- سلايد إضافية -->
+      <div class="slide">
+        <img src="https://via.placeholder.com/320x480.png?text=Slide+2" alt="Slide 2">
+        <div class="slide-overlay">
+          عنوان الفيديو الثاني
+          <a href="#" target="_blank">شاهد الآن ▶</a>
+        </div>
+      </div>
+
+      <div class="controls">
+        <button class="control-btn" id="prev">❮</button>
+        <button class="control-btn" id="next">❯</button>
       </div>
     </div>
 
+    <!-- باقي الأزرار -->
     <div class="buttons">
       <a href="cors.html" class="button-link">منصتنا التعليمية 🏫</a>
       <a href="motaba.html" class="button-link">المتابعة 📱</a>
@@ -204,5 +228,26 @@
       <a href="shakwy.html" class="button-link">الشكاوي 📣</a>
     </div>
   </div>
+
+  <script>
+    let slides = document.querySelectorAll(".slide");
+    let currentIndex = 0;
+
+    document.getElementById("next").addEventListener("click", () => {
+      slides[currentIndex].classList.remove("active");
+      currentIndex = (currentIndex + 1) % slides.length;
+      slides[currentIndex].classList.add("active");
+    });
+
+    document.getElementById("prev").addEventListener("click", () => {
+      slides[currentIndex].classList.remove("active");
+      currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+      slides[currentIndex].classList.add("active");
+    });
+
+    setInterval(() => {
+      document.getElementById("next").click();
+    }, 5000);
+  </script>
 </body>
 </html>
